welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:8: error: value =! is not a member of Int
  if (b=!a & c=!a) {
       ^redTicket:8: error: value =! is not a member of Int
  if (b=!a & c=!a) {
              ^